<resources>
    <string name="app_name">Book Finder</string>

    <string name="alert">Alert</string>
    <string name="ok">OK</string>

    <string name="not_available">Information is not available</string>

    <string name="search">Search</string>
    <string name="search_here">Search</string>
    <string name="thumbnail_description">Thumbnail image of the book cover</string>

    <string name="search_meta">We found %d more books for this query.</string>
    <string name="search_meta_not_available">Sorry! No books available for this query.</string>

    <string name="unexpected_error">Unexpected Error</string>
    <string name="unauthorized">Unauthorized</string>
    <string name="fav_remove_sb_message">Book is removed from your favourites</string>
    <string name="fav_added_sb_message">Book is added to your favourites</string>
    <string name="undo">UNDO</string>
    <string name="action_favorite">Favourites</string>
    <string name="ad">Advertisement</string>


    <string name="embedded_url" translatable="false">https://books.google.lk/books?id=%1$s&#38;lpg=PP1&#38;pg=PP1&#38;output=embed</string>
    <string name="google_books_reviews_url" translatable="false">https://books.google.lk/books?id=%1$s&amp;sitesec=reviews</string>
    <string name="view_reviews_on_google_books">View Reviews on Google Books</string>

    <string name="ad_unit_id_search" translatable="false">ca-app-pub-3403694871866608/6994030093</string>
    <string name="ad_unit_id_favourites" translatable="false">ca-app-pub-3403694871866608/1243720404</string>
    <string name="ad_unit_id_detail_page_2" translatable="false">ca-app-pub-3403694871866608/1238198584</string>
    <string name="ad_unit_id_detail_page_1" translatable="false">ca-app-pub-3403694871866608/8605552711</string>
    <string name="ad_unit_id_reader_page" translatable="false">ca-app-pub-3403694871866608/2005012009</string>

    <string name="full_preview">CLICK HERE FOR FULL PREVIEW</string>
    <string name="partial_preview">CLICK HERE FOR PARTIAL PREVIEW</string>
    <string name="no_preview">NO PREVIEW AVAILABLE</string>
    <string name="reader_message">Tip: Double tap for next page.</string>

    <!--    <string name="ad_unit_id_search">ca-app-pub-3940256099942544/2247696110</string>-->
    <!--    <string name="ad_unit_id_favourites">ca-app-pub-3940256099942544/1044960115</string>-->
    <!--    <string name="ad_unit_id_detail_page_1">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="ad_unit_id_detail_page_2">ca-app-pub-3940256099942544/6300978111</string>-->
    <!--    <string name="ad_unit_id_reader_page">ca-app-pub-3940256099942544/6300978111</string>-->


    <string name="version">Version 1.5.0</string>
    <string name="app_icon">App Icon</string>
    <string name="small_ad">Ad</string>
    <string name="now_reading">Now Reading:</string>
    <string name="remove_from_favourites">REMOVE FROM FAVOURITES</string>
    <string name="background_image">background image</string>
    <string name="background_image_overlay">background image overlay</string>
    <string name="favourites_icon">favourites icon</string>
    <string name="favourites_list">Favourites List</string>
    <string name="close_icon">close icon</string>
    <string name="search_icon">search icon</string>

    <string name="rating_count_1">%d Review</string>
    <string name="rating_count_many">%d Reviews</string>
    <string name="rating_count_0">No Reviews Available</string>

    <!-- Book metadata section -->
    <string name="book_information">Book Information</string>
    <string name="community_stats">Community Stats</string>
    <string name="view_on_external_sites">View on External Sites</string>
    <string name="google_books">Google Books</string>
    <string name="open_library">Open Library</string>

    <!-- Metadata format strings -->
    <string name="publisher_info">📚 %1$s • %2$s</string>
    <string name="publisher_only">📚 %1$s</string>
    <string name="page_count">📖 %d pages</string>
    <string name="categories">🏷️ %1$s</string>
    <string name="isbn_info">🔢 %1$s: %2$s</string>

    <!-- Open Library stats format strings -->
    <string name="ol_rating">⭐ Average Rating: %1$.2f (%2$d ratings)</string>
    <string name="ol_want_to_read">📚 Want to Read: %d readers</string>
    <string name="ol_currently_reading">📖 Currently Reading: %d readers</string>
    <string name="ol_already_read">✅ Already Read: %d readers</string>
</resources>
