<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000"
    android:gravity="center"
    android:paddingTop="20dp"
    tools:context=".activities.SearchActivity">

    <LinearLayout
        android:layout_height="48dp"
        android:layout_width="match_parent"
        android:background="@drawable/search_bar_background"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/search_icon"
            android:padding="15dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:layout_gravity="top"
            android:background="@null"
            android:id="@+id/et_search"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:hint="@string/search_here"
            android:inputType="text"
            android:importantForAutofill="no"
            android:textColor="#fff"
            android:textColorHint="#757575"
            android:textSize="14sp" />

        <ImageView
            android:id="@+id/iv_clear"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/close_icon"
            android:padding="15dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/ic_close"
            android:visibility="gone" />

        <View
            android:id="@+id/v_separator"
            android:layout_width="1dp"
            android:layout_height="25dp"
            android:layout_gravity="center"
            android:background="#fff"
            android:visibility="gone" />

        <Button
            android:id="@+id/b_search"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/search"
            android:textColor="#fff"
            android:textSize="14sp"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/iv_favourites"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/favourites_list"
            android:padding="15dp"
            android:src="@drawable/ic_list_heart" />


    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_search_results"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#000"
        android:visibility="gone">

        <TextView
            android:id="@+id/tv_results_meta_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-thin"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:textColor="#fff"
            android:textStyle="italic" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_below="@id/tv_results_meta_data"
            android:id="@+id/rv_search_results"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingStart="5dp"
            android:paddingTop="3dp"
            android:paddingEnd="5dp" />

        <View
            android:layout_height="17dp"
            android:layout_width="match_parent"
            android:layout_below="@id/tv_results_meta_data"
            android:background="@drawable/gradient_background_for_search_meta" />

    </RelativeLayout>


</LinearLayout>