<?xml version="1.0" encoding="utf-8"?>
<com.google.android.gms.ads.nativead.NativeAdView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ad_view_search"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="7.4dp"
    android:layout_marginTop="17dp"
    android:layout_marginEnd="7.4dp"
    android:layout_marginBottom="0dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="9dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#ECEBEB"
            android:minHeight="50dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ad_attribution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="sans-serif-condensed-medium"
                    android:text="@string/small_ad"
                    android:gravity="center"
                    android:textColor="#000"
                    android:textStyle="bold"
                    android:textSize="12sp" />

                <com.google.android.gms.ads.nativead.MediaView
                    android:id="@+id/ad_media"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_below="@+id/ad_attribution"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/thumbnail_description" />

                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    app:cardCornerRadius="5dp">

                    <ImageView
                        android:id="@+id/ad_icon"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_margin="2dp"
                        android:adjustViewBounds="true"
                        android:background="@color/searchBackground"
                        android:contentDescription="@string/ad" />
                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <TextView
                android:id="@+id/ad_headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:fontFamily="sans-serif-condensed"
                android:textSize="13sp"
                android:textColor="#000"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ad_body"
                android:fontFamily="sans-serif-condensed-light"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textColor="#000"
                android:layout_marginEnd="5dp"
                android:textSize="12sp" />

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/ad_call_to_action"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="sans-serif-condensed"
                android:textColor="#000"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</com.google.android.gms.ads.nativead.NativeAdView>
